public/css/profiles.css
/*!
Profiles Plugin CSS (generated from Sass)
*/
/** Variables */
/** Sass styles for publications */
.profiles-plugin.profile .item-template {
  display: none;
}
.profiles-plugin.profile {
  clear: both;
}
.profiles-plugin.profile .info {
  float: left;
  margin-left: 20px;
  width: 65%;
  margin-bottom: 30px;
}
.profiles-plugin.profile ul{
  -webkit-padding-start: 20px;
  padding-bottom: 0px;
}
.profiles-plugin.profile .contact-info {
  margin-left: 15px;
  -webkit-padding-start: 0px;
  -webkit-margin-start: 0px;
  margin-bottom: 15px;
}
.profiles-plugin.profile .contact-info li{
  list-style: none;
}
.profiles-plugin.profile .profile-image {
  float: left;
  width: 25%;
  height: auto;
  margin-bottom: 30px;
}
.filter-container{
  margin-bottom: 5px;
  float: right;
}
.profile-tags{
  margin-bottom: 5px;
}
.profile-tags span{
  padding: 2px 5px;
  margin: 2px;
  background-color: lightgrey;
  font-size: 10px;
  border-radius: 5px;
}
ul.profile-preparations li{
  list-style-type: square;
  color: grey;
  font-size: 12px;
}
ul.profile-awards{
  -webkit-padding-start: 0px;
  padding-bottom: 0px;
}
ul.profile-awards li{
  font-size: 12px;
}
ul.profile-appointments li{
  font-size: 12px;
}
.profiles-plugin.profile .profile-publications {
  max-height: 150px;
  overflow: hidden;
  overflow-y: scroll;
  margin-bottom: 20px;
  font-size: 12px;
}

@media screen and (max-width: 768px) {
  .profiles-plugin.profile .profile-image {
    width: 200px;
    margin-bottom: 10px;
  }

  .profiles-plugin.profile .info {
    width: 100%;
    margin-left: 0px;
  }
  #filter-container{
    float: none;
  }
}


/*# sourceMappingURL=profiles.css.map */

